# stronk1

./: .gitignore  README.md  Stronk1_HighLevelArchitecture_v1.docx  Stronk1_PRD_v1.docx  Stronk1_ProductBrief_v1.docx  Stronk1_TODO.md  flake.nix
.github/workflows/: build-iso.yml
docs/: DEVELOPER.md  INSTALL.md
forge/: Cargo.toml  com.stronk.forge.desktop  default.nix
forge-backend/: Cargo.toml
forge-backend/migrations/: 001_initial.sql
forge-backend/src/: config.rs  db.rs  main.rs  models.rs  scanner.rs  storage.rs
forge-backend/src/routes/: apps.rs  health.rs  mod.rs  submissions.rs
forge/src/: flathub.rs  flatpak.rs  main.rs
forge/src/pages/: browse.rs  detail.rs  installed.rs  mod.rs  updates.rs
hardware/: kefka.nix  setzer.nix  snappy.nix
installer/: installer.nix  iso.nix  stronk-firmware-guide.sh  stronk-install.sh
modules/: apps.nix  assertions.nix  browser-choice.nix  browser.nix  compat.nix  core.nix  desktop.nix  security.nix  theme.nix
tests/: integration.nix
