[package]
name = "forge-backend"
version = "0.1.0"
edition = "2021"
description = "The Forge — Stronk app store backend"
license = "GPL-3.0"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }
clamav-client = { version = "2.2", features = ["tokio"] }
tempfile = "3"
