[package]
name = "the-forge"
version = "0.1.0"
edition = "2021"
description = "The Forge — Stronk 1 app store"
license = "GPL-3.0-or-later"

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = ["tokio", "winit"] }
tokio = { version = "1", features = ["rt-multi-thread", "process", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
